fix: null check missing